fix wrapp in sales

--- a/styles/components/Products/CatalogProductCard.module.sass
+++ b/styles/components/Products/CatalogProductCard.module.sass
@@ -27,6 +27,7 @@
             position: relative
 
     .product_card__price_diff
+        white-space: nowrap
         background-color: #00a651
         border-radius: 4px
         padding: 0 3px
